<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/name"
        android:inputType="textCapSentences"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@color/white"/>

    <EditText
        android:id="@+id/et_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:hint="@string/surname"
        android:inputType="textCapSentences"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/btn_giris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:backgroundTint="@color/pink_dark"/>
</LinearLayout>